--- a/environment.yml
+++ b/environment.yml
@@ -11,7 +11,7 @@ dependencies:
   - ipywidgets
   - jupyter_client
   - jupyter_core
-  - conda-forge::jupyterlab
+  - jupyterlab
   - lxml
   - matplotlib
   - mkl-service
